@@ -150,6 +150,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Remove obsoleted internal implementaiton of OrderedDict.
     - Test for tar packaging fixups
     - Stop using deprecated unittest asserts
+    - messages in strip-install-dir test now os-neutral
     
   From Hao Wu
     - typo in customized decider example in user guide 
